--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,7 @@ ENCRYPTION_KEY=
 ACCESS_CONTROL_ALLOW_ORIGIN_HEADER=https://example.com
 #ENABLED_MODULES=i4trust
 #GOOGLE_SERVICE_ACCOUNT_KEY_PATH=
+API_URL=https://example.com/api
 
 DATA_MODELS_SCHEME=http
 DATA_MODELS_HOST=localhost
