--- a/src/.env.example
+++ b/src/.env.example
@@ -3,7 +3,7 @@ SHOW_ERRORS=false
 REQUESTS_TIMEOUT=5
 ENCRYPTION_KEY=
 ACCESS_CONTROL_ALLOW_ORIGIN_HEADER=https://example.com
-#ENABLED_MODULES=i4trust
+ENABLED_MODULES=data-services,wot,dsc
 #GOOGLE_SERVICE_ACCOUNT_KEY_PATH=
 API_URL=https://example.com/api
 
